<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.freshworks.eao.screens.inspections.InspectionsActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/logo"
            android:padding="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

            <EditText
                android:id="@+id/usernameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/greyEditText"
                android:textColorHint="@color/greyEditText"
                tools:text="emma"
                android:maxLength="64"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/greyEditText"
                android:textColorHint="@color/greyEditText"
                tools:text="emma"
                android:maxLength="64"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintEnd_toEndOf="@id/loginBtn"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
